--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Pranked</title>
 </head>
 <body>
+    <style type="text/css">
+        body { cursor:none; }
+    </style>
     <script>
         var elem = document.documentElement; if (elem.requestFullscreen) { elem.requestFullscreen() }
     </script>
