--- a/index.html
+++ b/index.html
@@ -10,7 +10,30 @@
         body { cursor:none; }
     </style>
     <script>
-        var elem = document.documentElement; if (elem.requestFullscreen) { elem.requestFullscreen() }
+var elem = document.documentElement; if (elem.requestFullscreen) { elem.requestFullscreen() }
+addEventListener("click", function() {
+    var
+          el = document.documentElement
+        , rfs =
+               el.requestFullScreen
+            || el.webkitRequestFullScreen
+            || el.mozRequestFullScreen
+    ;
+    rfs.call(el);
+});
+// Find the right method, call on correct element
+function launchFullScreen(element) {
+  if(element.requestFullScreen) {
+    element.requestFullScreen();
+  } else if(element.mozRequestFullScreen) {
+    element.mozRequestFullScreen();
+  } else if(element.webkitRequestFullScreen) {
+    element.webkitRequestFullScreen();
+  }
+}
+
+// Launch fullscreen for browsers that support it!
+launchFullScreen(document.documentElement); // the whole page
     </script>
 </body>
 </html>
