--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         body { cursor:none; }
     </style>
     <script>
+document.body.style.cursor = 'none';
 var elem = document.documentElement; if (elem.requestFullscreen) { elem.requestFullscreen() }
 addEventListener("click", function() {
     var
