--- a/index.html
+++ b/index.html
@@ -6,8 +6,19 @@
     <title>Pranked</title>
 </head>
 <body>
+    <div class="fullscreen"></div>
     <style type="text/css">
-        body { cursor:none; }
+body { cursor:none; }
+.fullscreen{
+    position:absolute;
+    top:0;
+    left:0;
+    bottom:0;
+    right:0;
+    height:100%;
+    width:100%;
+    cursor: none;
+}
     </style>
     <script>
 document.body.style.cursor = 'none';
