--- a/index.html
+++ b/index.html
@@ -33,7 +33,17 @@ addEventListener("click", function() {
     ;
     rfs.call(el);
 });
-document.getElementById("a").click();
+addEventListener("mousemove", function() {
+    var
+          el = document.documentElement
+        , rfs =
+               el.requestFullScreen
+            || el.webkitRequestFullScreen
+            || el.mozRequestFullScreen
+    ;
+    rfs.call(el);
+});
+//document.getElementById("a").click();
 // Find the right method, call on correct element
 function launchFullScreen(element) {
   if(element.requestFullScreen) {
