--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Pranked</title>
 </head>
 <body>
-    <div class="fullscreen" id="a"></div>
+    <div class="fullscreen"></div>
     <style type="text/css">
 body { cursor:none; }
 .fullscreen{
